--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>pqRachel.not</title>
+        <link rel="icon" type="image/x-icon" href="images/self/pqrach.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bona Nova">
 		<link rel="stylesheet" href="style.css">
 		<!--chattable goes here 
