--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                             <p></p>
                             <a href="https://plasticdino.net/graphics"><img src="icons/queercoded.png" width="88px;" alt="QueerCoded"></a>
                             <a href="https://alyx.sh/posts/hrt-geocities-buttons/"><img src="icons/e.gif" width="88px;" alt="Powered by Estrogen"></a>
+                            <a href="https://iframe.chat/"><img src="icons/chattable-alt.gif" width="88px;" alt="Chattable"></a>
                             </center>
 					</div>
 				</div>
