--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>pqRachel.not</title>
+		<title>pqRachel.not Home Page</title>
         <link rel="icon" type="image/x-icon" href="images/self/pqrach.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bona Nova">
 		<link rel="stylesheet" href="style.css">
@@ -26,7 +26,7 @@
 	<div class=wrapper>
         <!--
 		<div class=header>
-            !--I don't need this: <p>pqRachel.not
+            !--I don't need this: <p>pqRachel.not Home Page
             !--Cuz this comes with a image attached to the code if I actually make one. (See css)
         </div>
         -->
@@ -138,12 +138,12 @@
 						<center><h1 style="margin-top: -10px;">Nav Bar</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                             <p></p>
                             <ul>
-                                <li style="font-size: large;"><a href="index.html">Home/About</a></li>
+                                <li style="font-size: large;"><a href="index.html">Home</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">Blanksford Comics</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">Blanksford Wiki</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Art Gallery</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Games</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Journal/Notes</a></li>
+                                <li style="font-size: large;"><a href="placeholder.html">Journal</a></li>
                             </ul>
 					</div>
 				</div>
@@ -163,18 +163,20 @@
                         <center style=font-size:13px>
                             <p></p>
 						    <li>Make a Background Image</li>
-                            <li>Create Blanksford Comics Page and Make them Readable on Site</li>
+                            <li>Create Blanksford Comics Page</li>
                             <li>Create Blanksford Wiki Page and get it Working on Site</li>
                             <li>Add Solthran Ciphers to Blanksford Wiki</li>
+                            <li>Change Preview for Home Page Latest Pics</li>
                             <li>Create Art Gallery Page</li>
                             <li>Create Page for My Games</li>
                             <li>Create Journal Page</li>
-                            <li>Create SiteMap</li>
+                            <li>Update Commission Info (After ArtFight)</li>
                             <li>Find more Buttons to Add to Left Sidebar</li>
-                            <li>Make Triangle Buddy Mobile Friendly</li>
                             <li>Get Chattable Working</li>
                             <li>Figure out how to do a Guestbook</li>
-                            <li>Make everything cooler/cuter.</li>
+                            <li>Make everything cooler / cuter.</li>
+                            <li>Add Dark Mode for the Degens /pos</li>
+                            <li>Make Whole Site Mobile Friendly???</li>
                         </center>
 					</div>
 				</div>
@@ -212,9 +214,13 @@
 						<center><h1 style="margin-top: -10px;">Changelog</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                         <center style=font-size:13px>
 						    <p>2025/07/28:
+                            <br>Added SiteMap
+						    <p>2025/07/28:
                             <br>Site reworked mostly from scratch using other IndieWeb sites as inspiration and with some help from another template I found.
 						    <p>2025/07/27:
-                            <br>Fixed the Selfie Randomizer and did the art for my Site Button.
+                            <br>Did the art for my Site Button.
+						    <p>2025/07/27:
+                            <br>Fixed the Selfie Randomizer.
 						    <p>2025/07/22:
                             <br>Site initially launched using a template I found.
                         </center>
@@ -235,7 +241,7 @@
         <!-- Footer!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 		<div id="footer" style="margin-top: 25px; margin-bottom: 10px;">
             <center style="text-align: center;">
-                <a href="placeholder.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
+                <a href="sitemap.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
                 <a target="_blank" href="https://bsky.app/profile/pqrachel.bsky.social"><image src="icons/bluesky.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://pqrachel.tumblr.com"><image src="icons/tumblr.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
