--- a/placeholder.html
+++ b/placeholder.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>pqRachel.not</title>
+		<title>pqR Lost?</title>
+        <link rel="icon" type="image/x-icon" href="images/self/pqrach.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bona Nova">
 		<link rel="stylesheet" href="style.css">
 		<!--chattable goes here 
@@ -54,12 +55,12 @@
 						<center><h1 style="margin-top: -10px;">Nav Bar</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                             <p></p>
                             <ul>
-                                <li style="font-size: large;"><a href="index.html">Home/About</a></li>
+                                <li style="font-size: large;"><a href="index.html">Home</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">Blanksford Comics</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">Blanksford Wiki</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Art Gallery</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Games</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Journal/Notes</a></li>
+                                <li style="font-size: large;"><a href="placeholder.html">Journal</a></li>
                             </ul>
 					</div>
 				</div>
