--- a/prologuezine.html
+++ b/prologuezine.html
@@ -4,16 +4,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>pqRachel.not</title>
+		<title>Blanksford Prologue Zine</title>
+        <link rel="icon" type="image/x-icon" href="images/prologuezine/Zine Thumb.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bona Nova">
 		<link rel="stylesheet" href="style.css">
-		<!--chattable goes here 
-		<script src="https://chattable.neocities.org/scripts/main.min.js"></script>
-        <script>
-			chattable.initialize({
-			});
-		</script>
-        -->
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 			  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 			  crossorigin="anonymous"></script>
@@ -141,12 +135,12 @@
 						<center><h1 style="margin-top: -10px;">Nav Bar</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                             <p></p>
                             <ul>
-                                <li style="font-size: large;"><a href="index.html">Home/About</a></li>
+                                <li style="font-size: large;"><a href="index.html">Home</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">Blanksford Comics</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">Blanksford Wiki</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Art Gallery</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Games</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Journal/Notes</a></li>
+                                <li style="font-size: large;"><a href="placeholder.html">Journal</a></li>
                             </ul>
 					</div>
 				</div>
