--- a/placeholder.html
+++ b/placeholder.html
@@ -93,7 +93,7 @@
         <!-- Footer!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 		<div id="footer" style="margin-top: 25px; margin-bottom: 10px;">
             <center style="text-align: center;">
-                <a href="placeholder.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
+                <a href="sitemap.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
                 <a target="_blank" href="https://bsky.app/profile/pqrachel.bsky.social"><image src="icons/bluesky.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://pqrachel.tumblr.com"><image src="icons/tumblr.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
