--- a/firstdate.html
+++ b/firstdate.html
@@ -169,11 +169,6 @@
                             dots[slideIndex-1].className += " active";
                             }
                         </script>
-
-                        <br><br>
-                        <a href="placeholder.html">
-                            <center><h1 class="button-text">Fold that Zine!</h1></center>
-                        </a>
                         </div>
 					</div>
 				</div>
@@ -228,7 +223,7 @@
         <!-- Footer!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 		<div id="footer" style="margin-top: 25px; margin-bottom: 10px;">
             <center style="text-align: center;">
-                <a href="placeholder.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
+                <a href="sitemap.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
                 <a target="_blank" href="https://bsky.app/profile/pqrachel.bsky.social"><image src="icons/bluesky.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://pqrachel.tumblr.com"><image src="icons/tumblr.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
