--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 						<center><h1 style="margin-top: -10px;">Things to Add</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                         <center style=font-size:13px>
                             <p></p>
+                            <li>Create/add header image to act as big Home Link.</li>
 						    <li>Make a Background Image</li>
                             <li>Create Blanksford Comics Page</li>
                             <li>Create Blanksford Wiki Page and get it Working on Site</li>
