--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
                         </div>
 
 						<p><h1 style="margin-bottom: -2px;">Heyo, I'm pqRach!</h1><span>Rachel Petitt - They/Them</span>
-                            <br><br><span>
-						I'm a comic/OC artist. My main work is a series of comics and art known collectively as the 'Blanksford Project'.</span>
-                        <br><span>But I have many other projects not falling under that world as well as games that I've made fully by myself.</span>
+                            <br><br>
+                            <span style="color: black;">
+						    I'm a comic/OC artist. My main work is a series of comics and art known collectively as the 'Blanksford Project'.</span>
+                            <br><span style="color: black;">But I have many other projects not falling under that world as well as games that I've made fully by myself.</span>
 					</div>
 				</div>
 				<div id="flex" style="margin-bottom:-10px">
@@ -89,7 +90,7 @@
 					    <div class=inner>
                             <center>
                                 <h2 style="margin-top: -10px;">Latest Comic</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
-                                <a href="prologuezine.html">
+                                <a href="comics.html">
 						        <img src="images/prologuezine/Zine pg1.png" class="preview-pic" width=100% alt="Blanksford Prologue Zine Cover Art">
                                 Blanksford Prologue Zine</a>
                             </center>
@@ -109,7 +110,7 @@
 					    <div class=inner>
                             <center>
                                 <h2 style="margin-top: -10px;">Latest Game</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
-                                <a target="_blank" href="https://rachel-codiferus.itch.io/spooky-survival">
+                                <a href="games.html">
 						        <img src="images/spooky.png" class="preview-pic" width=100% alt="Spooky Survival Title Card">
                                 Spooky Survival on itch.io</a>
                             </center>
@@ -119,9 +120,9 @@
 				<div class=box>
 					<center><h2 style="margin-top: -10px;">Commission Info</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;"></center>
 					<div class=inner>
-						<p>I take Commissions and Donations through Ko-fi.
+						<p style="color: black;">I take Commissions and Donations through Ko-fi.
                         <br><strike>If you want some of my art, it's roughly $25 per character.</strike>
-                        <br>(Commissions are temporarily closed for Art Fight.)
+                        <br>(Commissions are temporarily closed for Art Fight.)</p>
                         <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
                         <script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#e0418e', 'M4M315RLM6');kofiwidget2.draw();</script> 
 					</div>
@@ -138,12 +139,13 @@
 						<center><h1 style="margin-top: -10px;">Nav Bar</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                             <p></p>
                             <ul>
-                                <li style="font-size: large;"><a href="index.html">Home</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Blanksford Comics</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Blanksford Wiki</a></li>
+                                <li style="font-size: larger;"><a href="index.html">Home</a></li>
+                                <li style="font-size: large;"><a href="comics.html">Blanksford Comics</a></li>
+                                <li style="font-size: large;"><a href="Blanksford Wiki.html">Blanksford Wiki</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Art Gallery</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">My Games</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Journal</a></li>
+                                <li style="font-size: large;"><a href="games.html">My Games</a></li>
+                                <li style="font-size: large;"><a href="journal.html">Journal</a></li>
+                                <li style="font-size: large;"><a href="sitemap.html">Site Map</a></li>
                             </ul>
 					</div>
 				</div>
@@ -161,16 +163,13 @@
 					<div class=inner>
 						<center><h1 style="margin-top: -10px;">Things to Add</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                         <center style=font-size:13px>
-                            <p></p>
-                            <li>Create/add header image to act as big Home Link.</li>
-						    <li>Make a Background Image</li>
-                            <li>Create Blanksford Comics Page</li>
-                            <li>Create Blanksford Wiki Page and get it Working on Site</li>
+                            <span style="color: black;"><p>
+                            <li>Make Triangle Buddy say he's a Home Page Link on Hover.</li>
+                            <li>Make a Background Image</li>
                             <li>Add Solthran Ciphers to Blanksford Wiki</li>
                             <li>Change Preview for Home Page Latest Pics</li>
                             <li>Create Art Gallery Page</li>
-                            <li>Create Page for My Games</li>
-                            <li>Create Journal Page</li>
+                            <li>Fix Journal Page</li>
                             <li>Update Commission Info (After ArtFight)</li>
                             <li>Find more Buttons to Add to Left Sidebar</li>
                             <li>Get Chattable Working</li>
@@ -178,6 +177,8 @@
                             <li>Make everything cooler / cuter.</li>
                             <li>Add Dark Mode for the Degens /pos</li>
                             <li>Make Whole Site Mobile Friendly???</li>
+                            <li>Make Selfie Randomizer not Repeat</li>
+                            </span>
                         </center>
 					</div>
 				</div>
@@ -214,6 +215,9 @@
 					<div class=inner>
 						<center><h1 style="margin-top: -10px;">Changelog</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                         <center style=font-size:13px>
+                            <span style="color: black;">
+						    <p>2025/07/29:
+                            <br>Added Pages for my Comics & Games. Also hosted and linked to the Blanksford Wiki.
 						    <p>2025/07/28:
                             <br>Added SiteMap
 						    <p>2025/07/28:
@@ -224,13 +228,14 @@
                             <br>Fixed the Selfie Randomizer.
 						    <p>2025/07/22:
                             <br>Site initially launched using a template I found.
+                            </span>
                         </center>
 					</div>
 				</div>
 				<div class=box style="height:300px; padding:15px;">
 					<div class=inner>
 						<center><h1 style="margin-top: -10px;">Chattable</h1><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
-						    <p>Chattable Goes Here!
+						    <p><span style="color: black;">Chattable Goes Here!</span>
                         </center>
 					</div>
 				</div>
@@ -242,7 +247,7 @@
         <!-- Footer!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 		<div id="footer" style="margin-top: 25px; margin-bottom: 10px;">
             <center style="text-align: center;">
-                <a href="sitemap.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
+                <span style="font-size: small;">Quick Links: </span>
                 <a target="_blank" href="https://bsky.app/profile/pqrachel.bsky.social"><image src="icons/bluesky.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://pqrachel.tumblr.com"><image src="icons/tumblr.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
@@ -257,7 +262,9 @@
     <!-- Buddy!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <!-- Buddy!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <div id="triangle" style="position: fixed; top: 0px; right: 0px">
+        <a href="index.html">
         <img src="images/triangle.png" height="200px" alt="Triangle Man">
+        </a>
     </div>
   </body>
 </html>
