--- a/firstdate.html
+++ b/firstdate.html
@@ -185,12 +185,13 @@
 						<center><h1 style="margin-top: -10px;">Nav Bar</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                             <p></p>
                             <ul>
-                                <li style="font-size: large;"><a href="index.html">Home</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Blanksford Comics</a></li>
+                                <li style="font-size: larger;"><a href="index.html">Home</a></li>
+                                <li style="font-size: large;"><a href="comics.html">Blanksford Comics</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">Blanksford Wiki</a></li>
                                 <li style="font-size: large;"><a href="placeholder.html">My Art Gallery</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">My Games</a></li>
-                                <li style="font-size: large;"><a href="placeholder.html">Journal</a></li>
+                                <li style="font-size: large;"><a href="games.html">My Games</a></li>
+                                <li style="font-size: large;"><a href="journal.html">Journal</a></li>
+                                <li style="font-size: large;"><a href="sitemap.html">Site Map</a></li>
                             </ul>
 					</div>
 				</div>
@@ -223,7 +224,7 @@
         <!-- Footer!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 		<div id="footer" style="margin-top: 25px; margin-bottom: 10px;">
             <center style="text-align: center;">
-                <a href="sitemap.html">SiteMap</a><span style="font-size: small;"> | Quick Links: </span>
+                <span style="font-size: small;">Quick Links: </span>
                 <a target="_blank" href="https://bsky.app/profile/pqrachel.bsky.social"><image src="icons/bluesky.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://pqrachel.tumblr.com"><image src="icons/tumblr.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
@@ -238,7 +239,9 @@
     <!-- Buddy!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <!-- Buddy!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <div id="triangle" style="position: fixed; top: 0px; right: 0px">
+        <a href="index.html">
         <img src="images/triangle.png" height="200px" alt="Triangle Man">
+        </a>
     </div>
   </body>
 </html>
