--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         <link rel="icon" type="image/x-icon" href="images/self/pqrach.png">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bona Nova">
 		<link rel="stylesheet" href="style.css">
-		<!--chattable goes here 
+		
 		<script src="https://chattable.neocities.org/scripts/main.min.js"></script>
         <script>
 			chattable.initialize({
+                theme : "Notepad"
 			});
 		</script>
-        -->
+
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"
 			  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 			  crossorigin="anonymous"></script>
@@ -89,30 +90,27 @@
 					<div class=box style="width: 33%;">
 					    <div class=inner>
                             <center>
-                                <h2 style="margin-top: -10px;">Latest Comic</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
+                                <h2 style="margin-top: -10px;">Comics</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                                 <a href="comics.html">
-						        <img src="images/prologuezine/Zine pg1.png" class="preview-pic" width=100% alt="Blanksford Prologue Zine Cover Art">
-                                Blanksford Prologue Zine</a>
+						        <img src="images/prologuezine/Zine pg1.png" class="preview-pic" width=100% alt="Blanksford Prologue Zine Cover Art"></a>
                             </center>
 					    </div>
 					</div>
 					<div class=box style="width: 33%; margin-left: 10px">
 					    <div class=inner>
                             <center>
-                                <h2 style="margin-top: -10px;">Latest Art</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
+                                <h2 style="margin-top: -10px;">Art Gallery</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                                 <a href="placeholder.html">
-						        <img src="images/latest.png" class="preview-pic" width=100% alt="ArtFight Attack of Merlin">
-                                ArtFight Attack for a BlueSky Mutual</a>
+						        <img src="images/latest.png" class="preview-pic" width=100% alt="ArtFight Attack of Merlin"></a>
                             </center>
 					    </div>
 				    </div>
 					<div class=box style="width: 33%; margin-left: 10px">
 					    <div class=inner>
                             <center>
-                                <h2 style="margin-top: -10px;">Latest Game</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
+                                <h2 style="margin-top: -10px;">Games</h2><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
                                 <a href="games.html">
-						        <img src="images/spooky.png" class="preview-pic" width=100% alt="Spooky Survival Title Card">
-                                Spooky Survival on itch.io</a>
+						        <img src="images/spooky.png" class="preview-pic" width=100% alt="Spooky Survival Title Card"></a>
                             </center>
 					    </div>
 				    </div>
@@ -166,8 +164,9 @@
                             <span style="color: black;"><p>
                             <li>Make Triangle Buddy say he's a Home Page Link on Hover.</li>
                             <li>Make a Background Image</li>
-                            <li>Add Solthran Ciphers to Blanksford Wiki</li>
-                            <li>Change Preview for Home Page Latest Pics</li>
+                            <li>Fix Prologue Zine's "Fold that Zine" Link</li>
+                            <li>Make Home Page Preview Pics Cycle on Hover</li>
+                            <li>Add Solthran Script / Solthran Ciphers to the Blanksford Wiki</li>
                             <li>Create Art Gallery Page</li>
                             <li>Fix Journal Page</li>
                             <li>Update Commission Info (After ArtFight)</li>
@@ -175,7 +174,7 @@
                             <li>Get Chattable Working</li>
                             <li>Figure out how to do a Guestbook</li>
                             <li>Make everything cooler / cuter.</li>
-                            <li>Add Dark Mode for the Degens /pos</li>
+                            <li>Add Dark Mode</li>
                             <li>Make Whole Site Mobile Friendly???</li>
                             <li>Make Selfie Randomizer not Repeat</li>
                             </span>
@@ -217,6 +216,8 @@
                         <center style=font-size:13px>
                             <span style="color: black;">
 						    <p>2025/07/29:
+                            <br>Got Chattable Working and added a couple emojis from my game Spooky Survival.
+						    <p>2025/07/29:
                             <br>Added Pages for my Comics & Games. Also hosted and linked to the Blanksford Wiki.
 						    <p>2025/07/28:
                             <br>Added SiteMap
@@ -232,10 +233,10 @@
                         </center>
 					</div>
 				</div>
-				<div class=box style="height:300px; padding:15px;">
+				<div class=box style="height:450px; padding:15px;">
 					<div class=inner>
 						<center><h1 style="margin-top: -10px;">Chattable</h1><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
-						    <p><span style="color: black;">Chattable Goes Here!</span>
+                            <iframe src='https://iframe.chat/embed?chat=pqRachelHome' id='chattable' frameborder='none' width="220px" height="400px"></iframe>
                         </center>
 					</div>
 				</div>
@@ -253,6 +254,7 @@
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://toyhou.se/Rachel_Codiferus/characters"><image src="icons/toyhouse.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://rachel-codiferus.itch.io/"><image src="icons/itchio.svg" class="icon-link" width="25px" height="25px"/></a>
+                <a target="_blank" href="https://linktr.ee/pqrachel"><image src="icons/linktree.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="mailto:rachelcpetitt+pqr@gmail.com"><image src="icons/email.svg" class="icon-link" width="25px" height="25px"/></a>
                 <span> | Site est. 2025</span>
             </center>
