--- a/journal.html
+++ b/journal.html
@@ -38,7 +38,7 @@
 			<div class=main>
 				<div class=box style="height:450px; overflow-y:auto;">  
 					<div class=inner><center><h1 style="margin-top: -10px;">This is my Journal Page!</h1></center><hr style="margin-top: -20px; margin-bottom: 0; border-top: 1px dashed #e0418e;">
-						<br><span style="color: black;">I plan on linking to external source that will make this easier to post to but now here's some stuff I plan on posting in this section.
+						<br><span style="color: black;">I plan on linking to an external source that will make this easier to post to later but for  now here's some stuff I plan on posting in this section.
 						<br>
                         <li>Game Tier Lists</li>
                         <li>Gaming Accomplishments</li>
@@ -108,6 +108,7 @@
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://toyhou.se/Rachel_Codiferus/characters"><image src="icons/toyhouse.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://rachel-codiferus.itch.io/"><image src="icons/itchio.svg" class="icon-link" width="25px" height="25px"/></a>
+                <a target="_blank" href="https://linktr.ee/pqrachel"><image src="icons/linktree.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="mailto:rachelcpetitt+pqr@gmail.com"><image src="icons/email.svg" class="icon-link" width="25px" height="25px"/></a>
                 <span> | Site est. 2025</span>
             </center>
