--- a/prologuezine.html
+++ b/prologuezine.html
@@ -180,6 +180,7 @@
                 <a target="_blank" href="https://ko-fi.com/pqrachel"><image src="icons/ko-fi.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://toyhou.se/Rachel_Codiferus/characters"><image src="icons/toyhouse.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="https://rachel-codiferus.itch.io/"><image src="icons/itchio.svg" class="icon-link" width="25px" height="25px"/></a>
+                <a target="_blank" href="https://linktr.ee/pqrachel"><image src="icons/linktree.svg" class="icon-link" width="25px" height="25px"/></a>
                 <a target="_blank" href="mailto:rachelcpetitt+pqr@gmail.com"><image src="icons/email.svg" class="icon-link" width="25px" height="25px"/></a>
                 <span> | Site est. 2025</span>
             </center>
