--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <center style=font-size:13px>
                             <span style="color: black;">
 						    <p>2025/07/29:
-                            <br>Got Chattable Working and added a couple emojis from my game Spooky Survival.
+                            <br>Got Chattable Working and added a few emojis from my game Spooky Survival.
 						    <p>2025/07/29:
                             <br>Added Pages for my Comics & Games. Also hosted and linked to the Blanksford Wiki.
 						    <p>2025/07/28:
